--- a/css/build.css
+++ b/css/build.css
@@ -71,54 +71,167 @@ border-spacing: 0;
 
 //
 
-.title-left,
-.title-right {
+div p {
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    font-weight: 200;
+    color: black;
+}
+
+.title {
     position: absolute;
     top: 0px;
     font-family: 'Fugue';
-    font-size: 2em; 
+    font-size: 3em; 
 }
 
 .title-left {
-    font-family: 'Fugue';
-    font-size: 3em; 
-    position: absolute;
-    top: 0px;
-    left: 0px;
     float: left;
     margin: 30px 0 0 30px;
 }
 
 .title-right {
-    font-family: 'Fugue';
-    font-size: 3em; 
+    float: left;
+    margin: 30px 0 0 20px;
+}
+
+.forms {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    margin-top: -25px;
+    margin-right: 75px;
+    top: 0;
+    right: 0;
+    height: 335px;
+    width: 250px;
+}
+
+.forms .desc {
     float: right;
-    margin: 30px 30px 0 0;
+    text-align: left;
+    padding-top: 50px;
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    font-weight: 200;
+    color: black;
+    text-transform: uppercase;
+}
+
+.forms #module-1,
+.forms #module-2 {
+    position: absolute;
+    cursor: pointer;
+    transform: scale(0.5, 0.5);
+    -ms-transform: scale(0.5, 0.5);
+    -webkit-transform: scale(0.5, 0.5);
+}
+
+#module-1 {
+    bottom: 0px;
+}
+
+.forms ul {
+    padding-top: 50px;
+}
+
+.forms .desc li {
+    padding-bottom: 105px;
+}
+
+.navigation {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    margin-top: 120px;
+    margin-right: 30px;
+    height: 335px;
+    width: 390px;
+}
+
+.navigation #icons {
+    float: left;
+    text-align: right;
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    font-weight: 200;
+    color: black;
+}
+
+.navigation #icons ul {
+    position: absolute;
+    right: 0;
+    margin-right: 90px;
+}
+
+.navigation #icons li {
+    height: 73px;
+}
+
+.navigation #icons li:first-child {
+    margin-top: -25px;
+}
+
+.navigation #icons li:last-child {
+    margin-bottom: -10px;
+}
+
+.navigation #icons li {
+    transform: scale(0.5, 0.5);
+    -ms-transform: scale(0.5, 0.5);
+    -webkit-transform: scale(0.5, 0.5);
+}
+
+.navigation .desc {
+    float: right;
+    text-align: left;
+    padding-top: 50px;
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    font-weight: 200;
+    color: black;
+    text-transform: uppercase;
+}
+
+.navigation .desc li {
+    padding-bottom: 45px;
 }
 
 #bottom {
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    font-weight: 200;
+    color: black;
     box-sizing: border-box;
     background-color: rgba(255,255,255,1);
-    padding-top: 15px;
     padding-left: 30px;
     padding-right: 30px;
     position: absolute;
     height: 50px;
     width: 100%;
     bottom: 0;
-    text-align: center;
     z-index: 99999999;
 }
 
-#bottom a {
-    font-size: .75em;
-    font-family: 'Graphik Web';
-    font-weight: 200;
-    text-transform: uppercase;
+.save-toggle a {
     color: black;
-    display: inline-block;
+    float: right;
+    padding-top: 20px;
+    padding-left: 40px;
+    z-index: 999999999;
     text-decoration: none;
+}
+
+.past-toggle {
+    float: left;
+    cursor: pointer;
+    padding-top: 20px;
+    padding-right: 40px;
+    z-index: 999999999;
+}
+
+.about-toggle {
+    float: left;
+    cursor: pointer;
+    padding-top: 20px;
+    padding-right: 40px;
+    z-index: 999999999;
 }
