--- a/css/build.css
+++ b/css/build.css
@@ -78,8 +78,33 @@ div p {
     color: black;
 }
 
+#deleteItAll {
+    font-family: 'Fugue';
+    color: white;
+    cursor: pointer;
+    position:fixed; 
+    right: 30px;
+    top: 30px; 
+    z-index:999999999999; 
+    font-size: 3em; 
+}
+
+.hidden { 
+    display: none; 
+    visibility: hidden; 
+}
+
+.disable {
+    pointer-events: none;
+    opacity: .35;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
 .title {
-    position: absolute;
+    position: fixed;
     top: 0px;
     font-family: 'Fugue';
     font-size: 3em; 
@@ -96,8 +121,8 @@ div p {
 }
 
 .forms {
-    position: absolute;
-    margin-top: -25px;
+    position: fixed;
+    margin-top: 65px;
     margin-right: 75px;
     top: 0;
     right: 0;
@@ -125,7 +150,7 @@ div p {
     -webkit-transform: scale(0.5, 0.5);
 }
 
-#module-1 {
+#module-2 {
     bottom: 0px;
 }
 
@@ -138,7 +163,7 @@ div p {
 }
 
 .navigation {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
     margin-top: 120px;
@@ -195,6 +220,110 @@ div p {
     padding-bottom: 45px;
 }
 
+.about {
+    top: 0px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 9999999;
+}
+
+.about:hover {
+    cursor: url('cursor_white.cur'), auto;
+}
+
+#popup {
+	position:absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 150px;
+    width: 400px;
+	height: 300px;
+	background: white;
+	padding:40px;
+}
+
+#popup h1 {
+    font-size: 1em;
+    font-family: 'Ogg';
+    text-transform: uppercase;
+    padding-bottom: 40px;
+}
+
+#popup p {
+    font-size: .75em;
+    font-family: 'Graphik Web';
+    text-align: left;
+    text-indent: 30px;
+    line-height: 1.25em;
+    padding-top: 10px;
+    color: black;
+}
+
+.table-photos {
+    top: 0px;
+    left: 0px;
+    overflow: scroll;
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    text-align: center;
+    padding-top: 100px;
+    z-index: 9999999;
+}
+
+.table-photos ul{
+    
+}
+
+.table-photos h1 {
+    font-size: 1em;
+    font-family: 'Ogg';
+    color: black;
+    text-transform: uppercase;
+    padding-top: 15px;
+}
+
+.table-photos:hover {
+    cursor: url('cursor_white.cur'), auto;
+}
+
+.table-photos li {
+    margin-bottom: 50px; 
+    
+}
+
+.table-photos li img {
+    width: 640px;
+    height: auto;
+}
+
+.table-photos .selected .selected-img {
+    box-sizing: border-box;
+    border: 4px solid transparent;
+    border: 1px solid black;
+}
+
+.table-photos .selected .selected-img:hover {
+    box-sizing: border-box;
+    border: 4px solid #29c171;
+}
+
+.table-photos .selected .eyes-below {
+    pointer-events: none;
+    position: absolute;
+    width: 640px;
+    left: 50%;
+    top: 180px;
+    transform: translateX(-50%);
+}
+
+
+.table-photos ul:last-child {
+    margin-bottom: 200px;
+}
+
 #bottom {
     font-size: .75em;
     font-family: 'Graphik Web';
@@ -204,7 +333,7 @@ div p {
     background-color: rgba(255,255,255,1);
     padding-left: 30px;
     padding-right: 30px;
-    position: absolute;
+    position: fixed;
     height: 50px;
     width: 100%;
     bottom: 0;
