up to date with the web build

--- a/css/build.css
+++ b/css/build.css
@@ -25,6 +25,11 @@ MAIN.CSS
     src: url('Fugue-Regular.otf');
 }
 
+@font-face {
+    font-family: 'Ogg';
+    src: url('css/Ogg-Roman.otf')
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -119,6 +124,21 @@ div p {
     float: left;
     margin: 30px 0 0 20px;
 }
+
+.thanks {
+    width: 100%;
+    text-align: center;
+}
+
+.thanks h1 {
+    position: absolute;
+    top: 275px;
+    width: 600px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: 'Ogg';
+    font-size: 5em;
+}   
 
 .forms {
     position: fixed;
@@ -301,13 +321,12 @@ div p {
 
 .table-photos .selected .selected-img {
     box-sizing: border-box;
-    border: 4px solid transparent;
-    border: 1px solid black;
+    border: 4px solid #29c171;
 }
 
-.table-photos .selected .selected-img:hover {
+.table-photos .other .other-img {
     box-sizing: border-box;
-    border: 4px solid #29c171;
+    border: 1px solid black;
 }
 
 .table-photos .selected .eyes-below {
